[package]
name = "saddle-physics-object-interaction"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-physics-object-interaction"
license = "MIT-0"
description = "Reusable 3D rigid-body pickup, carry, inspect, drop, and throw toolkit for Bevy + Avian3D"

[dependencies]
avian3d = { version = "0.6", features = ["serialize"] }
bevy = { version = "0.18", features = ["serialize"] }

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
