[package]
name = "saddle-physics-object-interaction-example-common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_enhanced_input = { workspace = true }
saddle-physics-object-interaction = { workspace = true }

[lints]
workspace = true
