[package]
name = "saddle-physics-object-interaction-example-picking-integration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-physics-object-interaction = { workspace = true }
saddle-pane = { workspace = true }

[lints]
workspace = true
